# patina-paging

./: .git-blame-ignore-revs  CODE.md  Cargo.toml  Makefile.toml  README.md  cspell.yml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: CiWorkflow.yml  MiriWorkflow.yml  ReleaseWorkflow.yml  ReleaseWorkflowPatinaFW.yml  ci-workflow.yml  crate-version-update.yml  label-issues.yml  label-sync.yml  miri-workflow.yml  publish-release.yml  test-pr.yml
docs/: paging.md  x64_paging.md
src/: aarch64.rs  arch.rs  lib.rs  page_allocator.rs  page_table.rs  page_table_error.rs  page_table_factory.rs  paging.rs  structs.rs  tests.rs  x64.rs
src/aarch64/: install_page_tables.asm  pagetablestore.rs  paging.rs  reg.rs  replace_table_entry.asm  structs.rs  tests.rs
src/aarch64/tests/: aarch64_paging_tests.rs  aarch64_test_page_allocator.rs
src/arm64/: mod.rs  paging.rs
src/page_table/: arm64.rs  x64.rs
src/page_table/arm64/: pagetablestore.rs  paging.rs  structs.rs
src/page_table/x64/: pagetablestore.rs  paging.rs  reg.rs  structs.rs
src/tests/: aarch64_paging_tests.rs  aarch64_test_page_allocator.rs  arm64_paging_tests.rs  arm64_test_page_allocator.rs  mod.rs  paging_tests.rs  test_page_allocator.rs  x64_paging_tests.rs  x64_test_page_allocator.rs
src/x64/: mod.rs  pagetablestore.rs  paging.rs  reg.rs  structs.rs  tests.rs
src/x64/tests/: x64_paging_tests.rs  x64_test_page_allocator.rs
