[package]
name = "patina_paging"
version = "8.1.2"
edition = "2024"
license = "Apache-2.0"
description = "Paging library for AArch64 & X64 architectures"
repository = "https://github.com/OpenDevicePartnership/patina-paging"
keywords = ["paging"]

[package.metadata.docs.rs]
features = ["doc"]

[dependencies]
bitfield-struct = "0.10"
bitflags = "2.6.0"
log = { version = "^0.4", default-features = false }
cfg-if = "1.0.0"

[features]
doc = []

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = false
codegen-units = 1
