[package]
name = "patina_paging"
version = "11.0.5"
edition = "2024"
license = "Apache-2.0"
description = "Paging library for AArch64 & X64 architectures"
repository = "https://github.com/OpenDevicePartnership/patina-paging"
keywords = ["paging"]

[package.metadata.docs.rs]
features = ["doc"]

[dependencies]
bitfield-struct = "0.13"
bitflags = "2.6.0"
log = { version = "^0.4", default-features = false }
cfg-if = "1.0.0"

[features]
doc = []
supervisor = []
# All no_std features to test in CI
ci_features = ["supervisor"]

[lints.rust]
# Set by cargo-llvm-cov during coverage runs. Declared here so gating
# `coverage_attribute` behind it does not trigger unexpected_cfgs warnings.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
